[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-task-scheduling"
version = "1.0.0"
description = "OpenEnv RL environment for intelligent task scheduling"
requires-python = ">=3.10"
authors = [
    {name = "Keerti Maanya", email = "keertimaanya06138@gmail.com"}
]
license = {text = "MIT"}
keywords = ["openenv", "task-scheduling", "rl", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.28.0",
    "pydantic==2.6.4",
    "openai>=1.14.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[project.scripts]
server = "api.server:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/keerti1111111/Intelligent-Task-Scheduling"
Documentation = "https://github.com/keertimaanya/Intelligent-Task-Scheduling-System/blob/main/README.md"
Repository = "https://github.com/keertimaanya/Intelligent-Task-Scheduling-System"

[tool.setuptools]
packages = ["env", "api", "graders", "agents", "tests"]

[tool.setuptools.package-data]
env = ["*.py"]
api = ["*.py"]
graders = ["*.py"]
agents = ["*.py"]
tests = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.pylint]
max-line-length = 120
disable = [
    "C0111",
    "R0913",
    "R0914"
]